# pm-nba-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DOCKER.md  Dockerfile.backend  Dockerfile.frontend  README.md  README_CN.md  docker-compose.yml  nginx.conf  pyproject.toml
.claude/: settings.local.json
config/: users.yaml.example
docs/: API_DRAFT_OTHER.md  API_GAME_DATA.md  API_LEAGUE_DATA.md  API_LIVE_ENDPOINTS.md  API_PLAYER_STATS.md  API_STATIC_DATA.md  API_TEAM_STATS.md  DESIGN_PREGAME_ANALYSIS.md  NBA_API_OVERVIEW.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md
examples/: README.md  __init__.py  advanced_usage.py  basic_usage.py  example.py  player_stats_analysis.py  pregame_basic.py
frontend/: .env.development  .env.production  .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: App.vue  vite-env.d.ts
pm_nba_agent/: __init__.py  logging_config.py  main.py
pm_nba_agent/agent/: __init__.py  analyzer.py  context.py  llm_client.py  models.py  prompts.py
pm_nba_agent/api/: __init__.py  app.py
pm_nba_agent/models/: __init__.py  game_data.py
pm_nba_agent/nba/: __init__.py  game_finder.py  live_stats.py  playbyplay.py  team_resolver.py
pm_nba_agent/parsers/: __init__.py  polymarket_parser.py
pm_nba_agent/polymarket/: __init__.py  auth.py  book_stream.py  config.py  executor.py  market.py  models.py  orders.py  positions.py  resolver.py  ws_client.py
pm_nba_agent/pregame/: __init__.py  cache.py  (+2 more)
tests/: README.md  __init__.py  test_full_flow.py  test_today_games.py
(+139 files in other folders)
