[project]
name = "pm-nba-agent"
version = "0.1.0"
description = "PM NBA Agent - 专门实时分析 NBA 的 AI Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "loguru>=0.7.3",
    "nba-api>=1.11.3",
    "openai>=2.15.0",
    "pandas>=3.0.0",
    "pocketflow>=0.0.3",
    "py-clob-client>=0.34.5",
    "python-dotenv>=1.2.1",
    "redis[hiredis]>=5.0.0",
    "websocket-client>=1.9.0",
]

[project.scripts]
pm-nba-worker = "pm_nba_agent.worker.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
